tests/NormalTests/paczka1/fuzzy1/76429511.err
Error in line 3: pYHq4K9Z7 A32 12,5
Error in line 5: pYHq4K9Z7 A666 95,2
Error in line 10: pYHq4K9Z7 A32 66,1
Error in line 2: XYAz A32 23,4
Error in line 4: MJaeNrHd A625 36,0
Error in line 14: KiAJ2tb8tuH A283 14,4
Error in line 17: MJaeNrHd A32 97,4
Error in line 24: MJaeNrHd A283 33,2
Error in line 16: XYAz A666 3,4
Error in line 27: KiAJ2tb8tuH A666 48,6
Error in line 18: A32 A666 46,6
